test/fail/actor-reference-missing.mo
// actor references

let _ = actor "";  // missing scheme
